--- a/control
+++ b/control
@@ -2,7 +2,7 @@ Source: ytdl-gui
 Section: utils
 Priority: optional
 Maintainer: Jason Goulet-Lipman <jason.gouletlipman@gmail.com>
-Build-Depends: debhelper-compat (= 12), build-essential, qt5-default, qtdeclarative5-dev
+Build-Depends: build-essential, qt5-default, qtdeclarative5-dev
 Standards-Version: 4.4.1
 Homepage: https://github.com/JaGoLi/ytdl-gui
 
