--- a/control
+++ b/control
@@ -1,4 +1,4 @@
-Source: ytdl-gui
+Source: youtubedl-gui
 Section: utils
 Priority: optional
 Maintainer: Jason Goulet-Lipman <jason.gouletlipman@gmail.com>
